# kagi-app

./: .gitignore  README.md  io.github.halfmexican.kagi.json  meson.build
data/: io.github.halfmexican.kagi.desktop.in  io.github.halfmexican.kagi.gschema.xml  io.github.halfmexican.kagi.metainfo.xml.in  io.github.halfmexican.kagi.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  kagi-app.gresource.xml  main.vala  meson.build  window.vala
src/gtk/: window.blp  window.ui
